alpm-types/src/version/snapshots/buildtool::invalid_buildtool_version@case_3_bad_package_version.snap
---
source: alpm-types/src/version/buildtool.rs
---
Parser failed with the following error:
error: invalid character
 | 
 | ß-1-any
 | ^ expected a stand-alone minimal alpm-package-version
 | 
 = while parsing:
   │ → expected a stand-alone minimal alpm-package-version, or a full alpm-package-version together with a alpm-architecture, delimited by a '-'
   └ minimal alpm-package-version: (ß-1-any)
     └ alpm-pkgver: (ß-1-any)
       → invalid character
       → expected an ASCII character, except for ':', '/', '-', '<', '>', '=', or any whitespace characters
